# rma4rma

./: .gitignore  .pylintrc  README.md  environment.yml  pyproject.toml  run_autoformat.sh  run_ci_checks.sh
.github/workflows/: ci.yml
src/rma4rma/: __init__.py  config.py  train.py
src/rma4rma/algo/: adaptation.py  buffer.py  callbacks.py  evaluate_policy.py  misc.py  models.py  policy.py  ppo.py
src/rma4rma/tasks/: __init__.py  peg_insertion.py  pick_cube.py  pick_single.py  stack_cube.py  turn_faucet.py
tests/: test_smoke.py
